<resources>
    <string name="app_name">网络调试</string>

    <string name="turn_on">打开网络调试</string>
    <string name="turn_off">关闭网络调试</string>
    <string name="debug_status">网络调试状态</string>
    <string name="turn_to_settings">系统显示设置</string>
    <string name="title_activity_settings">设置</string>
    <string name="action_settings">设置</string>
    <string name="net_status">当前网络状态</string>
    <string name="show_help">查看应用帮助</string>
    <string name="title_activity_help">帮助</string>


    <string name="sample_ip">192.168.123.100</string>
    <string name="click_prompt">点击复制或长按分享</string>
    <string name="sw_root_prompt">开启 Root 模式（解决部分机型不兼容）</string>
    <string name="sw_notification_prompt">调试开启时显示通知</string>
    <string name="sw_root_title">Root模式</string>
    <string name="sw_notification_title">开启通知</string>
    <string name="action_display_settings">系统显示设置</string>
    <string name="action_help">帮助</string>
    <string name="add_widget">Add widget</string>
    <string name="loading">loading...</string>
    <string name="help_usage">关于使用</string>
    <string name="help_widget_and_service">桌面控件与后台服务</string>
    <string name="todo">// TODO add about message</string>
    <string name="help_content">
        \n本应用仅为 adb over network 的开启程序，如果用户在使用的 ROM 没有相关功能模块或者端口不同，则无法开启，可以尝试手动开启。\n\n

        \n开启网络调试并连接到局域网后，在编辑框里会显示当前设备在局域网中的 IP 地址（譬如192.168.1.100）。在开发设备的终端中输入：\n\n
        \nadb connect mobile_ip\n
        \n例如：\n
        \nadb connect 192.168.1.100\n
        \n就可以连接并且调试了。\n\n
        \n
        \n显示设置主要方便设置屏幕关闭时间。对于作者自己来说，无线调试最大的好处是跟模拟器一样无需连线，所以最好也跟模拟器一样无需点亮屏幕，因此把这个也加了进去。
        \n注：在 CM 系应用中已经集成本开关，在开发者选项中勾选 adb over network 即可。\n
    </string>
    <string name="help_content2">
        \n如果您需要使用桌面控件来打开或关闭网络调试，可能会发现在杀死 Activity 时通知栏不会再显示无线调试的通知。
        \n
        \n这是因为本应用没有让服务跑在单独的线程中，也没有使用任何保护服务非正常情况下保持运行的方法。如果你需要它一直保持运行的话，建议你根据系统安全工具的配置让它保持后台运行。
        \n如果你觉得通知无可厚非，可以在设置中关闭通知。这样桌面控件也可以正常使用。
    </string>
    <string name="action_about">关于</string>
</resources>
