<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.twiceyuan.devmode.activity.SettingsActivity">

    <Switch
        android:id="@+id/sw_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/simple_text"
        android:padding="10dp"
        android:text="@string/sw_root_title" />

    <TextView
        android:text="@string/sw_root_prompt"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View android:background="@android:drawable/divider_horizontal_bright"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <Switch
        android:id="@+id/sw_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/simple_text"
        android:padding="10dp"
        android:text="@string/sw_notification_title" />

    <TextView
        android:text="@string/sw_notification_prompt"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
